src/core/generator/tests/snapshots/json_to_config_spec__open_api_to_config_spec__adyen-transfer-service.snap
---
source: src/core/generator/tests/open_api_to_config_spec.rs
expression: config.to_sdl()
---
schema @server @upstream {
  query: Query
}

type Query {
  """
  >Versions 1 and 2 of the Transfers API are deprecated. If you are just starting your implementation, use the latest version.

Returns all the transactions related to a balance account, account holder, or balance platform.

When making this request, you must include at least one of the following:
- `balanceAccountId`
- `accountHolderId`
- `balancePlatform`.

This endpoint supports cursor-based pagination. The response returns the first page of results, and returns links to the next and previous pages when applicable. You can use the links to page through the results.


  """
  getTransactions(accountHolderId: String, balanceAccountId: String, balancePlatform: String, createdSince: String!, createdUntil: String!, cursor: String, limit: Int, paymentInstrumentId: String): TransactionSearchResponse @http(baseURL: "https://balanceplatform-api-test.adyen.com/btl/v1", path: "/transactions", query: [{key: "accountHolderId", value: "{{.args.accountHolderId}}"}, {key: "balanceAccountId", value: "{{.args.balanceAccountId}}"}, {key: "balancePlatform", value: "{{.args.balancePlatform}}"}, {key: "createdSince", value: "{{.args.createdSince}}"}, {key: "createdUntil", value: "{{.args.createdUntil}}"}, {key: "cursor", value: "{{.args.cursor}}"}, {key: "limit", value: "{{.args.limit}}"}, {key: "paymentInstrumentId", value: "{{.args.paymentInstrumentId}}"}])
  """
  >Versions 1 and 2 of the Transfers API are deprecated. If you are just starting your implementation, use the latest version.

Returns a transaction.
  """
  getTransactionsId(id: String!): Transaction @http(baseURL: "https://balanceplatform-api-test.adyen.com/btl/v1", path: "/transactions/{{.args.id}}")
  """
  >Versions 1 and 2 of the Transfers API are deprecated. If you are just starting your implementation, use the latest version.

Starts a transfer request to move funds within your balance platform, or send funds to a [transfer instrument](https://docs.adyen.com/api-explorer/#/legalentity/v1/post/transferInstruments). Adyen sends the outcome of the transfer request through webhooks.

To use this endpoint, you need an additional role for your API credential and transfers must be enabled for the source balance account. Your Adyen contact will set these up for you.
  """
  postTransfers(WWW-Authenticate: String): TransferOld @http(baseURL: "https://balanceplatform-api-test.adyen.com/btl/v1", method: "POST", path: "/transfers", query: [{key: "WWW-Authenticate", value: "{{.args.WWW-Authenticate}}"}])
}
