src/core/generator/tests/snapshots/json_to_config_spec__open_api_to_config_spec__jsonplaceholder.snap
---
source: src/core/generator/tests/open_api_to_config_spec.rs
expression: config.to_sdl()
---
schema @server @upstream {
  query: Query
}

type Query {
  """
  Returns a post by id
  """
  getPost(id: Int!): Post @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/posts/{{.args.id}}")
  """
  Returns all posts
  """
  getPosts: [Post] @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/posts")
}
