src/core/generator/tests/snapshots/json_to_config_spec__open_api_to_config_spec__spotify.snap
---
source: src/core/generator/tests/open_api_to_config_spec.rs
expression: config.to_sdl()
---
schema @server @upstream {
  query: Query
}
